<resources>
    <string name="app_name">DiplomaProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_0bandithealth">0BanditHealth</string>
    <string name="dodged">Dodged</string>
    <string name="info">Против вас 1 бандит в прочных латах. У вас есть 3 действия Атака,Уклонение,Лечение. Атака нанесет удар равный вашему урону. Уклонение имеет шанс 50% уклонения от атаки. Лечение восстановит 20хп</string>
    <string name="attack">Атака</string>
    <string name="dodgfe">Уклонение</string>
    <string name="heal">Полечиться</string>
    <string name="_0dmg">0dmg</string>
    <string name="_0gold">0gold</string>
    <string name="_0hp">0HP</string>
    <string name="what_will_you_do">Что вы будете делать</string>
    <string name="you_entered_fight">Вы вступили в бой</string>
    <string name="confirm">Желаете ли вы подготовится к своему заданию? Пойти в кузню и купить новое снаряжение. Это действие отнимет у вас 40 золота</string>
    <string name="prepare">Пойти в кузню и подготовится к заданию</string>
    <string name="dont_prepare">Не подготавливаться и сразу пойти на задание</string>
    <string name="_20dmg">20dmg</string>
    <string name="_50gold">50gold</string>
    <string name="_100hp">100HP</string>
    <string name="want_to_prepare">Желаете ли вы подготовится к заданию</string>
    <string name="firstMission">Вы сорвали первую листовку</string>
    <string name="endgame">Конец игры</string>
    <string name="it_ended">Ваша игра подошла к концу</string>
    <string name="try_again">Желаете ли вы попробовать еще раз?</string>
    <string name="repeat">Начать заново</string>
    <string name="end">Закончить</string>
    <string name="_40">Желаете ли вы подготовится к своему заданию? Пойти в кузню и купить новое снаряжение. Это действие отнимет у вас 40 золота</string>
    <string name="prepare2">Пойти в кузню и подготовится к заданию</string>
    <string name="dont_prepare2">Не подготавливаться и сразу пойти на задание</string>
    <string name="_20dmg2">20dmg</string>
    <string name="_50gold2">50gold</string>
    <string name="_100hp2">100HP</string>
    <string name="want_to_prepare2">Желаете ли вы подготовится к заданию</string>
    <string name="secondMission">Вы сорвали вторую листовку</string>
    <string name="go_to_dest">Подойти к доске</string>
    <string name="start">Подойти к доске заданий? Что бы взять задание. (Начало игры)</string>
    <string name="miss">Пройти мимо</string>
    <string name="_20dmgStart">20dmg</string>
    <string name="_50goldStart">50gold</string>
    <string name="_100hpStart">100HP</string>
    <string name="startTheGane">Желаете ли вы начать игру</string>
    <string name="started">Начало игры</string>
    <string name="_1_2">Вы подходите к доске заданий и видите несколько заданий. 1. помочь перевозке груза каравану. 2.Уничтожить банду бандитов которые обустроились рядом с городом.</string>
    <string name="choose">Выбрать первое задание</string>
    <string name="second">Выбрать второе задание</string>
    <string name="_20dmgChoose">20dmg</string>
    <string name="_50goldChoose">50gold</string>
    <string name="_100hpChoose">100HP</string>
    <string name="chooseFirst">Выбор первого задания</string>
    <string name="chooseMission">Выбор задания</string>
</resources>